--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
             class="icon"
             onclick="location.href='https://github.com/'"
           />
+          <img
+            src="./assets/instagram.png"
+            alt="My Github profile"
+            class="icon"
+            onclick="location.href='https://www.instagram.com/akira.san__?igsh=MWdrNnlydGRoNXZndA==a'"
+          />
         </div>
       </div>
     </section>
