--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           />
           <img
             src="./assets/instagram.png"
-            alt="My Github profile"
+            alt="My Instagram profile"
             class="icon"
             onclick="location.href='https://www.instagram.com/akira.san__?igsh=MWdrNnlydGRoNXZndA==a'"
           />
