--- a/index.html
+++ b/index.html
@@ -4,7 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#ffdff3"/>
     <title>Andy Mendoza</title>
+
+    <meta name="description" content="Andy Mendoza's Portfolio, with over 2 years of experience in web development.">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://andydev-xi.vercel.app/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Andy Mendoza">
+    <meta property="og:description" content="Andy Mendoza's Portfolio, with over 2 years of experience in web development.">
+    <meta property="og:image" content="https://opengraph.b-cdn.net/production/images/3b638067-4f51-451f-a898-c2c930de90d6.png?token=BwvAppM_IkFOkMatq8XH-Ll2aiKe_qqOfV-6ifPF7w0&height=630&width=1200&expires=33277905746">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="andydev-xi.vercel.app">
+    <meta property="twitter:url" content="https://andydev-xi.vercel.app/">
+    <meta name="twitter:title" content="Andy Mendoza">
+    <meta name="twitter:description" content="Andy Mendoza's Portfolio, with over 2 years of experience in web development.">
+    <meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/3b638067-4f51-451f-a898-c2c930de90d6.png?token=BwvAppM_IkFOkMatq8XH-Ll2aiKe_qqOfV-6ifPF7w0&height=630&width=1200&expires=33277905746">
+
+
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
     <link rel="icon" href="favicon/favicon.png">
