--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
             <div class="article-container">
               <img
                 src="./assets/project-1.png"
-                alt="Project 1"
+                alt="Pixelap Project 1"
                 class="project-img"
               />
             </div>
@@ -369,22 +369,22 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/coming-soon.svg"
-                alt="Project 2"
+                src="./assets/project-2.png"
+                alt="Weather app project 2"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">COMING SOON</h2>
+            <h2 class="experience-sub-title project-title">Weather app</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='#'"
+                onclick="location.href='https://github.com/pixelaap/weatherapp'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='#'"
+                onclick="location.href='https://weatherapp-vert-ten.vercel.app/'"
               >
                 Live Demo
               </button>
