--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
           <img
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
-            class="icon"
+            class="icon icon__hover"
             onclick="location.href='https://linkedin.com/'"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
-            class="icon"
+            class="icon icon__hover"
             onclick="location.href='https://github.com/'"
           />
           <img
             src="./assets/instagram.png"
             alt="My Instagram profile"
-            class="icon"
+            class="icon icon__hover"
             onclick="location.href='https://www.instagram.com/akira.san__?igsh=MWdrNnlydGRoNXZndA==a'"
           />
         </div>
@@ -144,7 +144,7 @@
       />
     </section>
     <section id="experience">
-      <h1 class="title">Experience</h1>
+      <h2 class="title">Experience</h2>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
@@ -152,8 +152,8 @@
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  src="./assets/html.png"
+                  alt="Experience icon html"
                   class="icon"
                 />
                 <div>
@@ -163,8 +163,8 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  src="./assets/css-3.png"
+                  alt="Experience icon css"
                   class="icon"
                 />
                 <div>
@@ -174,8 +174,8 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  src="./assets/sass.png"
+                  alt="Experience icon sass"
                   class="icon"
                 />
                 <div>
@@ -185,8 +185,8 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  src="./assets/java-script.png"
+                  alt="Experience icon js"
                   class="icon"
                 />
                 <div>
@@ -196,8 +196,8 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  src="./assets/typescript.png"
+                  alt="Experience icon ts"
                   class="icon"
                 />
                 <div>
@@ -205,22 +205,12 @@
                   <p>Basic</p>
                 </div>
               </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Material UI</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
+              
 
               <article>
                 <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  src="./assets/photoshop.png"
+                  alt="Experience icon photoshop"
                   class="icon"
                 />
                 <div>
@@ -235,8 +225,8 @@
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  src="./assets/database.png"
+                  alt="Experience icon PostgreSQL"
                   class="icon"
                 />
                 <div>
@@ -246,8 +236,8 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  src="./assets/developer.png"
+                  alt="Experience icon node js"
                   class="icon"
                 />
                 <div>
@@ -255,25 +245,26 @@
                   <p>Intermediate</p>
                 </div>
               </article>
+              
               <article>
                 <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  src="./assets/social.png"
+                  alt="Experience icon git"
                   class="icon"
                 />
                 <div>
-                  <h3>Express JS</h3>
+                  <h3>Git</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  src="./assets/react.png"
+                  alt="Experience icon react"
                   class="icon"
                 />
                 <div>
-                  <h3>Git</h3>
+                  <h3>React</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -285,8 +276,8 @@
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  src="./assets/python.png"
+                  alt="Experience icon python"
                   class="icon"
                 />
                 <div>
@@ -296,8 +287,8 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  src="./assets/c-.png"
+                  alt="Experience icon c++"
                   class="icon"
                 />
                 <div>
@@ -307,8 +298,8 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  src="./assets/java.png"
+                  alt="Experience icon java"
                   class="icon"
                 />
                 <div>
@@ -318,8 +309,8 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
+                  src="./assets/c-sharp.png"
+                  alt="Experience icon c#"
                   class="icon"
                 />
                 <div>
@@ -339,7 +330,8 @@
       />
     </section>
     <section id="projects">
-      <h1 class="title">Projects</h1>
+      <h2 class="title title__personal">Personal</h2>
+      <h2 class="title">Projects</h2>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container color-container">
