--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="theme-color" content="#ffdff3"/>
+    <meta name="theme-color" content="#ffc5c5"/>
     <title>Andy Mendoza</title>
 
     <meta name="description" content="Andy Mendoza's Portfolio, with over 2 years of experience in web development.">
@@ -26,7 +26,6 @@
 
 
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="mediaqueries.css" />
     <link rel="icon" href="favicon/favicon.png">
   </head>
   <body>
@@ -144,7 +143,7 @@
       />
     </section>
     <section id="experience">
-      <h2 class="title">Experience</h2>
+      <h2 class="title">Skills</h2>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container">
@@ -429,7 +428,7 @@
         <div class="contact-info-container">
           <img
             src="./assets/whatsapp.png"
-            alt="LinkedIn icon"
+            alt="Whatsapp icon icon"
             class="icon contact-icon"
           />
           <p><a target="_blank" href="https://wa.link/4tjzb4">Whatsapp</a></p>
@@ -447,8 +446,11 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2025 Andy Dev. All Rights Reserved.</p>
+      <p>Copyright &#169; 2025 All Rights Reserved.</p>
+      <p>Made with ❤ by Andy Mendoza.</p>
     </footer>
     <script src="script.js"></script>
   </body>
 </html>
+
+
