--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/3b638067-4f51-451f-a898-c2c930de90d6.png?token=BwvAppM_IkFOkMatq8XH-Ll2aiKe_qqOfV-6ifPF7w0&height=630&width=1200&expires=33277905746">
 
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="icon" href="favicon/favicon.png">
   </head>
   <body>
@@ -449,7 +449,7 @@
       <p>Copyright &#169; 2025 All Rights Reserved.</p>
       <p>Made with ❤ by Andy Mendoza.</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="assets/js/script.js"></script>
   </body>
 </html>
 
