--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             src="./assets/github.png"
             alt="My Github profile"
             class="icon icon__hover"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://github.com/andydev2?tab=overview&from=2025-02-01&to=2025-02-28'"
           />
           <img
             src="./assets/instagram.png"
